UPDATE: CLO-5865 - Switch from Cobertura to JaCoCo - run also engine junit tests.
git-svn-id: https://svn.javlin.eu/svn/cloveretl.opensource/trunk-4-1@17274 a09ad3ba-1a0f-0410-b1b9-c67202f10d70